--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.csproj
@@ -33,6 +33,7 @@
 		<Title>.NET MAUI Toolkit</Title>
 		<Description>VijayAnand.MauiToolkit is a set of helper methods and classes to simplify working with .NET MAUI (and Blazor).</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>.NET,MAUI,Blazor,BlazorWebView,C#,Hybrid,Toolkit,Razor,RCL,iOS,Android,macOS,Windows,WinUI3,MacCatalyst</PackageTags>
