--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.csproj
@@ -1,50 +1,50 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
 
-		<!-- Project Options -->
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<RootNamespace>VijayAnand.MauiToolkit.Core</RootNamespace>
+        <!-- Project Options -->
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>VijayAnand.MauiToolkit.Core</RootNamespace>
 
-		<!-- NuGet Package Info -->
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageId>VijayAnand.MauiToolkit.Core</PackageId>
-		<Authors>Vijay Anand E G</Authors>
-		<Copyright>Copyright &#169; 2022 Vijay Anand E G</Copyright>
-		<Product>VijayAnand.MauiToolkit.Core is a set of helper methods and classes to simplify working with .NET MAUI (and Blazor).</Product>
-		<Title>.NET MAUI Toolkit - Core</Title>
-		<Description>VijayAnand.MauiToolkit.Core is a set of helper methods and classes to simplify working with .NET MAUI (and Blazor).</Description>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
-		<PackageTags>.NET,MAUI,Blazor,BlazorWebView,C#,Hybrid,Toolkit,Razor,RCL,iOS,Android,macOS,WinForms,Windows,WinUI3,WPF,MacCatalyst,Server,WebAssembly,WASM</PackageTags>
-		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes.txt"))</PackageReleaseNotes>
-		<AssemblyName>VijayAnand.MauiToolkit.Core</AssemblyName>
-		<Version>1.0.0</Version>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.0.0.0</FileVersion>
-		<PackageReadmeFile>overview.md</PackageReadmeFile>
-		<PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
+        <!-- NuGet Package Info -->
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>VijayAnand.MauiToolkit.Core</PackageId>
+        <Authors>Vijay Anand E G</Authors>
+        <Copyright>Copyright &#169; 2022 Vijay Anand E G</Copyright>
+        <Product>VijayAnand.MauiToolkit.Core is a toolkit with a set of abstractions to simplify working with .NET MAUI and Blazor.</Product>
+        <Title>.NET MAUI Toolkit - Core</Title>
+        <Description>VijayAnand.MauiToolkit.Core a toolkit with a set of abstractions to simplify working with .NET MAUI and Blazor.</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>.NET,MAUI,Blazor,BlazorWebView,C#,Hybrid,Toolkit,Razor,RCL,iOS,Android,macOS,WinForms,Windows,WinUI3,WPF,MacCatalyst,Server,WebAssembly,WASM</PackageTags>
+        <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes.txt"))</PackageReleaseNotes>
+        <AssemblyName>VijayAnand.MauiToolkit.Core</AssemblyName>
+        <Version>1.0.0</Version>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
+        <PackageReadmeFile>overview.md</PackageReadmeFile>
+        <PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
 
-		<!-- Source Linking -->
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
-	</PropertyGroup>
+        <!-- Source Linking -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
-		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-	</PropertyGroup>
+    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<None Include="overview.md" Pack="true" PackagePath="\" />
-		<None Include="release-notes.txt" />
-	</ItemGroup>
+    <ItemGroup>
+        <None Include="overview.md" Pack="true" PackagePath="\" />
+        <None Include="release-notes.txt" />
+    </ItemGroup>
 
 </Project>
