Current property that provides access to the AppService made public

--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.csproj
@@ -42,7 +42,7 @@
 		<PackageTags>.NET,MAUI,Blazor,BlazorWebView,C#,Hybrid,Toolkit,Razor,RCL,iOS,Android,macOS,Windows,WinUI3,MacCatalyst,Tizen</PackageTags>
 		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes.txt"))</PackageReleaseNotes>
 		<AssemblyName>VijayAnand.MauiToolkit</AssemblyName>
-		<Version>1.0.0-pre11</Version>
+		<Version>1.0.0</Version>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>1.0.0.0</FileVersion>
 		<PackageReadmeFile>overview.md</PackageReadmeFile>
