--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.csproj
@@ -33,6 +33,16 @@
 		<PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
 		<NeutralLanguage>en</NeutralLanguage>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+
+		<!-- Source Linking -->
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<DebugType>embedded</DebugType>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+		<!-- Package Validation -->
+		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="overview.md"
