--- a/.github/workflows/build-maui-toolkit.yml
+++ b/.github/workflows/build-maui-toolkit.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        working-directory: .src\VijayAnand.MauiToolkit
+        working-directory: .\src\VijayAnand.MauiToolkit
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
