Build artifacts archived

--- a/.github/workflows/build-maui-toolkit.yml
+++ b/.github/workflows/build-maui-toolkit.yml
@@ -55,3 +55,15 @@ jobs:
       - name: Build the Solution in Release mode
         shell: cmd
         run: .\Create-Package.bat Release
+
+      - name: Archive VijayAnand.MauiToolkit.Core NuGet package
+        uses: actions/upload-artifact@v3
+        with:
+          name: archive-core-nuget-package
+          path: .\VijayAnand.MauiToolkit.Core\bin\Release\VijayAnand.MauiToolkit.Core.1.0.1-pre1.nupkg
+
+      - name: Archive VijayAnand.MauiToolkit NuGet package
+        uses: actions/upload-artifact@v3
+        with:
+          name: archive-toolkit-nuget-package
+          path: .\VijayAnand.MauiToolkit\bin\Release\VijayAnand.MauiToolkit.1.0.1-pre1.nupkg
