--- a/.github/workflows/build-maui-toolkit.yml
+++ b/.github/workflows/build-maui-toolkit.yml
@@ -33,7 +33,7 @@ jobs:
           # Optional SDK version to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x
           dotnet-version: ${{ secrets.DOTNET_VERSION }}
           # Whether prerelease versions should be matched with non-exact versions (for example 5.0.0-preview.6 being matched by 5, 5.0, 5.x or 5.0.x). Defaults to false if not provided.
-          include-prerelease: true
+          include-prerelease: false
 
       # Install Maui workload
       - name: Install Maui workload
