Package is now stable with support for .NET MAUI GA/SR1

--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.csproj
@@ -53,6 +53,7 @@
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<UseMaui>true</UseMaui>
+		<MauiVersion>6.0.312</MauiVersion>
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
