Shared toolkit package updated to support .NET 6 SR8 and .NET 7 SR1.1

--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net6.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net6.csproj
@@ -54,7 +54,7 @@
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<UseMaui>true</UseMaui>
-		<MauiVersion>6.0.312</MauiVersion>
+		<!--<MauiVersion>6.0.548</MauiVersion>-->
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
