--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net7.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net7.csproj
@@ -54,7 +54,7 @@
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net7.0'">
 		<UseMaui>true</UseMaui>
-		<MauiVersion>7.0.49</MauiVersion>
+		<!--<MauiVersion>7.0.52</MauiVersion>-->
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
