--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.Net7.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.Net7.csproj
@@ -32,6 +32,9 @@
 		<!-- Source Linking -->
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<!--<DebugType>embedded</DebugType>-->
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
 		<!-- Package Validation -->
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
@@ -48,6 +51,10 @@
 	<ItemGroup>
 		<None Include="overview.md" Pack="true" PackagePath="\" />
 		<None Include="release-notes-net7.txt" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Remove="release-notes-net6.txt" />
 	</ItemGroup>
 
 </Project>
