--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net7.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net7.csproj
@@ -32,7 +32,7 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>VijayAnand.MauiToolkit.Pro</PackageId>
 		<Authors>Vijay Anand E G</Authors>
-		<Copyright>Copyright © 2022 Vijay Anand E G</Copyright>
+		<Copyright>Copyright &#169; 2022 Vijay Anand E G</Copyright>
 		<Product>VijayAnand.MauiToolkit.Pro is a toolkit with a set of helper methods and classes to simplify working with .NET MAUI and Blazor.</Product>
 		<Title>.NET MAUI Toolkit</Title>
 		<Description>VijayAnand.MauiToolkit.Pro is a toolkit with a set of helper methods and classes to simplify working with .NET MAUI and Blazor.</Description>
